<resources>
    <string name="app_name">Travel Booking</string>
    <string name="select_source">Select Source</string>
    <string name="select_dest">Select Destination</string>
    <string name="select_date">Select Date</string>
    <string name="trip_type_off">One Way</string>
    <string name="trip_type_on">Round Trip</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>

    <string-array name="cities">
        <item>New York</item>
        <item>London</item>
        <item>Paris</item>
        <item>Tokyo</item>
        <item>Mumbai</item>
    </string-array>
</resources>